test-nodes.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: foo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
        - name: foo-app
          image: 'kicbase/echo-server:1.0'
          ports:
          - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  type: ClusterIP
  selector:
    app: foo
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
spec:
  ingressClassName: nginx
  rules:
  - host: foo.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foo-service
            port:
              number: 8080
